--- a/NBH/NBH-war/web/s/customerView_1.xhtml
+++ b/NBH/NBH-war/web/s/customerView_1.xhtml
@@ -27,8 +27,8 @@
                                 <img src="https://img.freepik.com/free-vector/gradient-multigenerational-home-illustration_52683-134514.jpg" alt="" height="150px" width="200px"/>
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="#">Neighbourhood forum and groups</a></h5>
-                                <p>Stay updated with latest news and updates, join a group of your favourite activity.</p>
+                                <h5><a href="#">Neighbourhood forum</a></h5>
+                                <p>Stay updated with latest news and updates within your region.</p>
                             </div>
                         </div>
                     </div>
