--- a/NBH/NBH-war/web/s/editProfile.xhtml
+++ b/NBH/NBH-war/web/s/editProfile.xhtml
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <div class="col-lg-10">
-                            <h:commandButton value="Change Profile Photo" action="/addCustomerPhoto.xhtml?faces-redirect=true" styleClass="btn btn-primary mr-2" />
+                            <h:commandButton value="Change Profile Photo" action="addCustomerPhoto.xhtml?faces-redirect=true" styleClass="btn btn-primary mr-2" />
 
                             <h:commandButton value="Submit" action="#{customerManagedBean.editCustomer(customerManagedBean.selectedCustomer.id)}"  styleClass="btn btn-primary "/>
 
