--- a/NBH/NBH-war/web/s/editForumPost.xhtml
+++ b/NBH/NBH-war/web/s/editForumPost.xhtml
@@ -35,7 +35,7 @@
                         <div class="col-lg-10">
                             <h:commandButton value="Attach Photo" actionListener="#{postManagedBean.viewPostDetails(postManagedBean.currentPost.id)}" action="/addForumPhoto.xhtml?faces-redirect=true" styleClass="btn btn-primary mr-2" />
 
-                            <h:commandButton value="Submit" actionListener="#{postManagedBean.editPost()}" action="/myForumPost.xhtml?faces-redirect=true" styleClass="btn btn-primary "/>
+                            <h:commandButton value="Submit" actionListener="#{postManagedBean.editPost()}" action="myForumPost.xhtml?faces-redirect=true" styleClass="btn btn-primary "/>
 
                         </div>
                     </div>
