--- a/NBH/NBH-war/web/s/myForumPost.xhtml
+++ b/NBH/NBH-war/web/s/myForumPost.xhtml
@@ -47,13 +47,13 @@
                                                     </h:outputText>
                                                 </td>
                                                 <td class="shoping__cart__item__close">
-                                                    <h:commandButton value="View More" actionListener="#{postManagedBean.viewPostDetails(post.id)}" action="/viewForumPost.xhtml?faces-redirect=true"/>
+                                                    <h:commandButton value="View More" actionListener="#{postManagedBean.viewPostDetails(post.id)}" action="viewForumPost.xhtml?faces-redirect=true"/>
                                                 </td>
                                                 <td class="shoping__cart__item__close">
                                                     <h:commandButton value="Delete" actionListener="#{postManagedBean.deletePost(post.id)}"/>
                                                 </td>
                                                 <td class="shoping__cart__item__close">
-                                                    <h:commandButton value="Edit" actionListener="#{postManagedBean.viewPostDetails(post.id)}" action="/editForumPost.xhtml?faces-redirect=true"/>
+                                                    <h:commandButton value="Edit" actionListener="#{postManagedBean.viewPostDetails(post.id)}" action="editForumPost.xhtml?faces-redirect=true"/>
                                                 </td>
                                             </tr>
                                         </ui:repeat>
