--- a/NBH/NBH-war/web/s/addHiddenGemReview.xhtml
+++ b/NBH/NBH-war/web/s/addHiddenGemReview.xhtml
@@ -57,7 +57,7 @@
                                     <h:message for="review" style="color: red"/>
                                 </p>
                                 <h:inputTextarea id="review" value="#{hiddenGemManagedBean.review}"
-                                                 required="true" requiredMessage="required" rows="5" cols="50" />
+                                                 required="true" requiredMessage="required" rows="5" cols="50" style="padding: 15px" />
                             </div>
                             <h:commandButton styleClass="site-btn" action="#{hiddenGemManagedBean.addReview(customerManagedBean.selectedCustomer)}"
                                              value="Add"
