--- a/NBH/NBH-war/web/s/hiddenGems.xhtml
+++ b/NBH/NBH-war/web/s/hiddenGems.xhtml
@@ -102,7 +102,7 @@
                                                     </ul>
                                                     <h5 style="color: black">Place: #{hiddenGem.placeName}</h5>
                                                     <h5 style="color: black">Postal Code: #{hiddenGem.postalCode}</h5>
-                                                    <h5 style="color: black">District: #{hiddenGem.district}</h5>
+                                                    <h5 style="color: black">Region: #{hiddenGem.district}</h5>
                                                     <div>
                                                         <a href="#" class="toggle-reviews blog__btn">Reviews</a>
                                                         <div class="reviews-container" style="display: none;">
